added info of publications

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <p>
         Research Engineer / Open Source Team / Research And Development Department<br>
         ROBOTIS CO., LTD. (<a href="http://www.robotis.com" target="_blank">http://www.robotis.com</a>)<br>
-        Follow ROBOTIS on <a href="https://twitter.com/robotis" target="_blank">Twitter</a>, <a href="https://www.facebook.com/robotis.company" target="_blank">Facebook</a>, <a href="https://www.linkedin.com/company/robotis" target="_blank">Linkedin</a>
+        Follow ROBOTIS on <a href="https://github.com/ROBOTIS-GIT" target="_blank">GitHub</a>, <a href="https://twitter.com/robotis" target="_blank">Twitter</a>, <a href="https://www.facebook.com/robotis.company" target="_blank">Facebook</a>, <a href="https://www.linkedin.com/company/robotis" target="_blank">Linkedin</a>
         </p>
 
         <p>
@@ -170,7 +170,7 @@
         </p>
 
         <p>
-        Books (5), Journals (5), International Conference (8), Domestic Conference (24) [<a href="#publications">Publications</a>]
+        Books (6), Journals (6), International Conference (9), Domestic Conference (24) [<a href="#publications">Publications</a>]
         </p>
 
         <p>
@@ -191,7 +191,8 @@
         <h2>Awards</h2>
 
         <p>
-        2012-12 | Excellent Presentation Award of the SI2012,  SI2012 Committee<br>
+        2017-06 | Finalist of Best Service Robotics Paper Award at ICRA 2017<br>  
+        2012-12 | Excellent Presentation Award of the SI2012, SI2012 Committee<br>
         2009-12 | Best Poster Award, KIST Chief<br>
         2009-05 | Chairperson Award of Japan 15th ROBO-ONE, ROBO-ONE Committee<br>
         2008-10 | <b>Korea President Award</b>, International Robot Contest (IRC2008)<br>
@@ -380,7 +381,7 @@
         </header>
 
         <!-- ======================================================================= -->
-        <h2>Books (5)</h2>
+        <h2>Books (6)</h2>
 
         <p>
         <b>Application White Paper of Raspberry Pi</b><br>
@@ -417,13 +418,27 @@
         <a href="http://rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710036, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=10462923" target="_blank">Online Bookstore</a>, pp. 1-492, 2016.04.01<br>
         </p>
 
+        <p>
+        <b>ROS Robot Programming (Second Edition)</b><br>
+        ROS 로봇 프로그래밍 개정증보판 (in Korean)<br>
+        Yoonseok Pyo, HanCheol Cho, Leon Ryuwoon Jung, Taehun Lim<br>
+        <a href="http://rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710180, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=12443870" target="_blank">Online Bookstore</a>, pp. 1-482, 2017.08.18<br>
+        </p>
+
         <a class="image featured">
           <img alt="" src="images/publications/books.png">
         </a>
 
         <!-- ======================================================================= -->
-        <h2>Journals (5)</h2>
+        <h2>Journals (6)</h2>
 
+        <p>
+        <b>ROS-TMS and Big Sensor Box: Platforms for Informationally Structured Environment</b><br>
+        Ryo Kurazume, Yoonseok Pyo, Tokuo Tsuji, Akihiro Kawamura<br>
+        Journal of the Robotics Society of Japan, Vol.35, No.4, pp. 346-357, 2017<br>
+        <a href="http://robotics.ait.kyushu-u.ac.jp/kurazume_lab/papers/JRSJ17.pdf" target="_blank">PDF</a> (in Japanese)
+        </p>
+            
         <p>
         <b>Service Robot System with an Informationally Structured Environment</b><br>
         Yoonseok Pyo, Kouhei Nakashima, Shunya Kuwahata, Ryo Kurazume, Tokuo Tsuji, Ken'ichi Morooka, Tsutomu Hasegawa<br>
@@ -458,8 +473,15 @@
         </p>
 
         <!-- ======================================================================= -->
-        <h2>International Conference (8)</h2>
+        <h2>International Conference (9)</h2>
 
+        <p>
+        <b>Feasibility study of IoRT platform "Big Sensor Box"</b><br>
+        Ryo Kurazume, Yoonseok Pyo, Kazuto Nakashima, Tokuo Tsuji, Akihiro Kawamura<br>
+        Proc. IEEE International Conference on Robotics and Automation (ICRA2017), Singapore, 5.29-6.3, 2017,  <a href="http://robotics.ait.kyushu-u.ac.jp/kurazume_lab/papers/ICRA17-1.pdf" target="_blank">PDF</a>
+        </p>
+        </p>        
+        
         <p>
         <b>Control Architecture for Service Drone in Informationally Structured Environment</b><br>
         Ghallabi Farouk, Akihiro Kawamura, Yoonseok Pyo, Tokuo Tsuji, Ryo Kurazume<br>
