--- a/index.html
+++ b/index.html
@@ -160,17 +160,17 @@
         </p>
 
         <p>
-        Research Engineer / Open Source Team / Research And Development Department<br>
+        Senior Research Engineer / Open Source Team / Research And Development Department<br>
         ROBOTIS CO., LTD. (<a href="http://www.robotis.com" target="_blank">http://www.robotis.com</a>)<br>
         Follow ROBOTIS on <a href="https://github.com/ROBOTIS-GIT" target="_blank">GitHub</a>, <a href="https://twitter.com/robotis" target="_blank">Twitter</a>, <a href="https://www.facebook.com/robotis.company" target="_blank">Facebook</a>, <a href="https://www.linkedin.com/company/robotis" target="_blank">Linkedin</a>
         </p>
 
         <p>
-        I am a research engineer in ROBOTIS CO., LTD. and currently working on the service robot platform. I received Ph.D degree M.E. degree from the Graduate School of Information Science and Electrical Engineering, Kyushu University in 2016 and 2013. I was a research fellow of the Japan Society for the Promotion of Science (JSPS) from 2014 to 2016. I worked as a research fellow of Korea Institute of Science and Technology (KIST) from 2009 to 2010. I received B.E. degree from the Electronics & Informaion Engineering, Kwangwoon University, Korea, in 2009. My research interest is intelligent system and currently focusing on service robot platform based on the open source.
+        I am a senior research engineer in ROBOTIS CO., LTD. and currently working on the service robot platform. I received Ph.D degree M.E. degree from the Graduate School of Information Science and Electrical Engineering, Kyushu University in 2016 and 2013. I was a research fellow of the Japan Society for the Promotion of Science (JSPS) from 2014 to 2016. I worked as a research fellow of Korea Institute of Science and Technology (KIST) from 2009 to 2010. I received B.E. degree from the Electronics & Informaion Engineering, Kwangwoon University, Korea, in 2009. My research interest is intelligent system and currently focusing on service robot platform based on the open source.
         </p>
 
         <p>
-        Books (6), Journals (6), International Conference (9), Domestic Conference (24) [<a href="#publications">Publications</a>]
+        Books (9), Journals (6), International Conference (9), Domestic Conference (24) [<a href="#publications">Publications</a>]
         </p>
 
         <p>
@@ -191,7 +191,8 @@
         <h2>Awards</h2>
 
         <p>
-        2017-06 | Finalist of Best Service Robotics Paper Award at ICRA 2017<br>  
+        2017-10 | Finalist of arm TechCon Innovation Award 2017<br>
+        2017-06 | Finalist of Best Service Robotics Paper Award at ICRA 2017<br> 
         2012-12 | Excellent Presentation Award of the SI2012, SI2012 Committee<br>
         2009-12 | Best Poster Award, KIST Chief<br>
         2009-05 | Chairperson Award of Japan 15th ROBO-ONE, ROBO-ONE Committee<br>
@@ -206,7 +207,7 @@
         <h2>Experience</h2>
 
         <p>
-        2016-04 ~ PRESENT | Research Engineer, ROBOTIS Co., Ltd.<br>
+        2016-04 ~ PRESENT | Senior Research Engineer, ROBOTIS Co., Ltd.<br>
         2014-05 ~ 2016-03 | JSPS Research Fellow, Japan Society for the Promotion of Science<br>
         2011-05 ~ 2014-04 | Part Time, Dongbu Robot Co., Ltd.<br>
         2010-04 ~ 2011-09 | Visiting reporter, Monthly Robot<br>
@@ -240,8 +241,31 @@
       <div class="container">
 
         <header>
-          <h2>Research</h2>
+          <h2>Research and Development</h2>
         </header>
+
+        <!-- ======================================================================= -->
+        <h2>2016.04~PRESENT (ROBOTIS)</h2>
+
+        <a class="image featured">
+          <img alt="" src="images/research/turtlebot3_with_logo.png">
+        </a>
+
+        <p>
+        TurtleBot3 is a new generation mobile robot that is modular, compact and customizable. Let’s explore ROS and create exciting applications for education, research and product development.
+        The goal of TurtleBot3 is to drastically reduce the size and lower the price of the platform without sacrificing capability, functionality, and quality. Optional parts such as chassis, computers and sensors are available, and TurtleBot3 can be customized in various ways. TurtleBot3 is willing to be in the center of the maker movement by applying the latest technical advances of the SBC(Single Board Computer), the Depth sensor and 3D printing technology.
+        TurtleBot3 is a collaboration project among Open Robotics, ROBOTIS, and more partners like Intel, Onshape, OROCA. The Open Robotics is in charge of software and community activities, while ROBOTIS is in charge of manufacturing and global distribution. We need more partners who can provide technology, educational service or distribution in each country.  
+        </p>
+
+        <p>
+        Project Manager<br>
+        - <a href="http://www.turtlebot.com/" target="_blank">TurtleBot</a><br>
+        - <a href="http://emanual.robotis.com/docs/en/platform/openmanipulator/" target="_blank">OpenManipulator</a><br>
+        - <a href="http://emanual.robotis.com/docs/en/parts/controller/opencr10/" target="_blank">OpenCR</a><br>
+        - <a href="http://emanual.robotis.com/docs/en/software/dynamixel/dynamixel_sdk/overview/" target="_blank">Dynamixel SDK</a><br>
+        - <a href="http://emanual.robotis.com/docs/en/software/dynamixel/dynamixel_workbench/" target="_blank">Dynamixel Workbench</a><br>
+        - <a href="https://github.com/ROBOTIS-GIT" target="_blank">ROBOTIS OpenSource Projects</a>
+        </p>
 
         <!-- ======================================================================= -->
         <h2>2013.04~2016.03 (Ph.D.)</h2>
@@ -381,7 +405,7 @@
         </header>
 
         <!-- ======================================================================= -->
-        <h2>Books (6)</h2>
+        <h2>Books (9)</h2>
 
         <p>
         <b>Application White Paper of Raspberry Pi</b><br>
@@ -419,14 +443,34 @@
         </p>
 
         <p>
-        <b>ROS Robot Programming (Second Edition)</b><br>
-        ROS 로봇 프로그래밍 개정증보판 (in Korean)<br>
+        <b>ROS Robot Programming (in Korean, Second Edition)</b><br>
+        ROS 로봇 프로그래밍 개정증보판<br>
         Yoonseok Pyo, HanCheol Cho, Leon Ryuwoon Jung, Taehun Lim<br>
         <a href="http://rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710180, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=12443870" target="_blank">Online Bookstore</a>, pp. 1-482, 2017.08.18<br>
         </p>
 
+        <p>
+        <b>ROS Robot Programming (in English)</b><br>
+        Yoonseok Pyo, HanCheol Cho, Leon Ryuwoon Jung, Taehun Lim<br>
+        <a href="http://emanual.robotis.com/docs/en/platform/turtlebot3/learn/#books" target="_blank">ROBOTIS Co.,Ltd.</a>, ISBN: 9791196230715, <a href="https://community.robotsource.org/t/download-the-ros-robot-programming-book-for-free/51" target="_blank">E-Book</a>, pp. 1-487, 2017.12.22<br>
+        </p>
+
+        <p>
+        <b>ROS Robot Programming (in Chinese)</b><br>
+        Yoonseok Pyo, HanCheol Cho, Leon Ryuwoon Jung, Taehun Lim<br>
+        <a href="http://emanual.robotis.com/docs/en/platform/turtlebot3/learn/#books" target="_blank">ROBOTIS Co.,Ltd.</a>, ISBN: 9791196230722, <a href="https://community.robotsource.org/t/download-the-ros-robot-programming-book-for-free/51" target="_blank">E-Book</a>, pp. 1-496, 2017.12.22<br>
+        </p>
+
+        <p>
+        <b>ROS Robot Programming (in Japanese)</b><br>
+        ROSロボットプログラミングバイブル<br>
+        Yoonseok Pyo, Ryo Kurazume, Leon Ryuwoon Jung<br>
+        <a href="https://www.ohmsha.co.jp/book/9784274221965/" target="_blank">オーム社</a>, ISBN: 9784274221965, <a href="http://amzn.asia/79RXhOi" target="_blank">Amazon Bookstore</a>, pp. 1-437, 2018.03.16<br>
+        </p>
+
         <a class="image featured">
-          <img alt="" src="images/publications/books.png">
+          <img alt="" src="images/publications/books.png"><br>
+          <img alt="" src="images/publications/books2.png">
         </a>
 
         <!-- ======================================================================= -->
@@ -785,7 +829,7 @@
     <div class="copyright">
 
       <p>
-      &copy; 2010-2016 Yoonseok Pyo. All rights reserved.
+      &copy; 2010-2018 Yoonseok Pyo. All rights reserved.
       </p>
 
       <ul class="menu">
