update bio and  publications

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </p>
 
         <p>
-        I am a senior research engineer in ROBOTIS CO., LTD. and currently working on the service robot platform. I received Ph.D degree M.E. degree from the Graduate School of Information Science and Electrical Engineering, Kyushu University in 2016 and 2013. I was a research fellow of the Japan Society for the Promotion of Science (JSPS) from 2014 to 2016. I worked as a research fellow of Korea Institute of Science and Technology (KIST) from 2009 to 2010. I received B.E. degree from the Electronics & Informaion Engineering, Kwangwoon University, Korea, in 2009. My research interest is intelligent system and currently focusing on service robot platform based on the open source.
+        I am a senior research engineer in ROBOTIS CO., LTD. and currently working on the service robot platform. I received Ph.D. degree and M.E. degree from the Graduate School of Information Science and Electrical Engineering, Kyushu University in 2016 and 2013. I was a research fellow of the Japan Society for the Promotion of Science (JSPS) from 2014 to 2016. I worked as a research fellow at Korea Institute of Science and Technology (KIST) from 2009 to 2010. I received B.E. degree from the Electronics & Information Engineering, Kwangwoon University, Korea, in 2009. My research interest is intelligent system and currently focusing on service robot platform based on the open source.
         </p>
 
         <p>
@@ -480,9 +480,10 @@
         <b>ROS-TMS and Big Sensor Box: Platforms for Informationally Structured Environment</b><br>
         Ryo Kurazume, Yoonseok Pyo, Tokuo Tsuji, Akihiro Kawamura<br>
         Journal of the Robotics Society of Japan, Vol.35, No.4, pp. 346-357, 2017<br>
+        <a href="https://doi.org/10.7210/jrsj.35.346" target="_blank">https://doi.org/10.7210/jrsj.35.346</a>
         <a href="http://robotics.ait.kyushu-u.ac.jp/kurazume_lab/papers/JRSJ17.pdf" target="_blank">PDF</a> (in Japanese)
         </p>
-            
+        
         <p>
         <b>Service Robot System with an Informationally Structured Environment</b><br>
         Yoonseok Pyo, Kouhei Nakashima, Shunya Kuwahata, Ryo Kurazume, Tokuo Tsuji, Ken'ichi Morooka, Tsutomu Hasegawa<br>
