--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </p>
 
         <p>
-        Books (9), Journals (6), International Conference (9), Domestic Conference (24) [<a href="#publications">Publications</a>]
+        Books (9), Journals (7), International Conference (9), Domestic Conference (24) [<a href="#publications">Publications</a>]
         </p>
 
         <p>
@@ -474,8 +474,16 @@
         </a>
 
         <!-- ======================================================================= -->
-        <h2>Journals (6)</h2>
+        <h2>Journals (7)</h2>
 
+        <p>
+        <b>Development of ROS-TMS 5.0 for informationally structured environment</b><br>
+        Junya Sakamoto, Kouhei Kiyoyama, Kohei Matsumoto, Yoonseok Pyo, Akihiro Kawamura, Ryo Kurazume<br>
+        ROBOMECH Journal, Vol.5, No.1, pp. 24, 2018<br>
+        <a href="https://doi.org/10.1186/s40648-018-0123-9" target="_blank">https://doi.org/10.1186/s40648-018-0123-9</a>
+        <a href="https://rdcu.be/8h1P" target="_blank">PDF</a>
+        </p>
+        
         <p>
         <b>ROS-TMS and Big Sensor Box: Platforms for Informationally Structured Environment</b><br>
         Ryo Kurazume, Yoonseok Pyo, Tokuo Tsuji, Akihiro Kawamura<br>
