added new information

--- a/index.html
+++ b/index.html
@@ -160,9 +160,8 @@
         </p>
 
         <p>
-        Senior Research Engineer / Open Source Team / Research And Development Department<br>
+        Senior Research Engineer / Research And Development Department<br>
         ROBOTIS CO., LTD. (<a href="http://www.robotis.com" target="_blank">http://www.robotis.com</a>)<br>
-        Follow ROBOTIS on <a href="https://github.com/ROBOTIS-GIT" target="_blank">GitHub</a>, <a href="https://twitter.com/robotis" target="_blank">Twitter</a>, <a href="https://www.facebook.com/robotis.company" target="_blank">Facebook</a>, <a href="https://www.linkedin.com/company/robotis" target="_blank">Linkedin</a>
         </p>
 
         <p>
@@ -174,8 +173,22 @@
         </p>
 
         <p>
-        Curriculum Vitae (<a href="files/YoonseokPyo_CV(20160401).pdf" target="_blank"> PDF format</a>)
+        Curriculum Vitae - 2016.04 (<a href="files/YoonseokPyo_CV(20160401).pdf" target="_blank">PDF format</a>)
         </p>
+
+        <!-- ======================================================================= -->
+        <h2>Experience</h2>
+
+        <p>
+        2018-09 ~ PRESENT | <a href="https://index.ros.org/doc/ros2/Governance/" target="_blank">ROS 2 Technical Steering Committee (TSC)</a><br>
+        2016-04 ~ PRESENT | Senior Research Engineer, <a href="http://www.robotis.com" target="_blank">ROBOTIS Co., Ltd.</a><br>
+        2014-05 ~ 2016-03 | JSPS Research Fellow, <a href="https://www.jsps.go.jp/english/" target="_blank">Japan Society for the Promotion of Science</a><br>
+        2011-05 ~ 2014-04 | Part Time, Dongbu Robot Co., Ltd.<br>
+        2010-04 ~ 2011-09 | Visiting reporter, Monthly Robot<br>
+        2009-05 ~ 2010-02 | Research Fellow, Korea Institute of Science and Technology (KIST)<br>
+        2008-07 ~ 2008-08 | Intern, National Instruments Korea<br>
+        2005-02 ~ 2005-08 | Intern, ROBOTIS Co., Ltd.
+        </p> 
 
         <!-- ======================================================================= -->
         <h2>Education</h2>
@@ -191,6 +204,7 @@
         <h2>Awards</h2>
 
         <p>
+        2019-04 | The Japan Society of Mechanical Engineers (JSME), Education Award<br>
         2017-10 | Finalist of arm TechCon Innovation Award 2017<br>
         2017-06 | Finalist of Best Service Robotics Paper Award at ICRA 2017<br> 
         2012-12 | Excellent Presentation Award of the SI2012, SI2012 Committee<br>
@@ -201,19 +215,6 @@
         2005-10 | MCIE Minister Award, Robot Universiade Festival (RUF2005)<br>
         2005-10 | MCIE Minister Award,  ROBOTPIAD 2005<br>
         <a href="#awards">etc. Awards</a>
-        </p>
-
-        <!-- ======================================================================= -->
-        <h2>Experience</h2>
-
-        <p>
-        2016-04 ~ PRESENT | Senior Research Engineer, ROBOTIS Co., Ltd.<br>
-        2014-05 ~ 2016-03 | JSPS Research Fellow, Japan Society for the Promotion of Science<br>
-        2011-05 ~ 2014-04 | Part Time, Dongbu Robot Co., Ltd.<br>
-        2010-04 ~ 2011-09 | Visiting reporter, Monthly Robot<br>
-        2009-05 ~ 2010-02 | Research Fellow, Korea Institute of Science and Technology (KIST)<br>
-        2008-07 ~ 2008-08 | Intern, National Instruments Korea<br>
-        2005-02 ~ 2005-08 | Intern, ROBOTIS Co., Ltd.
         </p>
 
         <!-- ======================================================================= -->
@@ -245,22 +246,33 @@
         </header>
 
         <!-- ======================================================================= -->
-        <h2>2016.04~PRESENT (ROBOTIS)</h2>
+        <h2>2016.04 ~ PRESENT (ROBOTIS)</h2>
 
         <a class="image featured">
           <img alt="" src="images/research/turtlebot3_with_logo.png">
         </a>
 
         <p>
-        TurtleBot3 is a new generation mobile robot that is modular, compact and customizable. Let’s explore ROS and create exciting applications for education, research and product development.
+        <strong>TurtleBot3</strong> is a new generation mobile robot that is modular, compact and customizable. Let’s explore ROS and create exciting applications for education, research and product development.
         The goal of TurtleBot3 is to drastically reduce the size and lower the price of the platform without sacrificing capability, functionality, and quality. Optional parts such as chassis, computers and sensors are available, and TurtleBot3 can be customized in various ways. TurtleBot3 is willing to be in the center of the maker movement by applying the latest technical advances of the SBC(Single Board Computer), the Depth sensor and 3D printing technology.
         TurtleBot3 is a collaboration project among Open Robotics, ROBOTIS, and more partners like Intel, Onshape, OROCA. The Open Robotics is in charge of software and community activities, while ROBOTIS is in charge of manufacturing and global distribution. We need more partners who can provide technology, educational service or distribution in each country.  
+        </p>
+
+        <a class="image featured">
+          <img alt="" src="images/research/product_img_openmanipulator_01.png">
+        </a>
+        <a class="image featured">
+          <img alt="" src="images/research/product_img_openmanipulator_02.png">
+        </a>
+
+        <p>
+        <strong>OpenManipulator-X</strong> is an open source software and open source hardware based manipulator developed by ROBOTIS. OpenManipulator supports the Dynamixel X series, and you can make robots by choosing the actuators of the specifications you require. Also, since it is composed of the basic frame and the 3D printed frame, it is possible to produce a new type of manipulator according to your environment or purpose. With these characteristics, we will provide manipulators with various shapes and functions such as SCARA, Planar, and Delta in addition to the four-joint manipulator. OpenManipulator supports ROS, OpenCR, Arduino IDE and Processing.
         </p>
 
         <p>
         Project Manager<br>
         - <a href="http://www.turtlebot.com/" target="_blank">TurtleBot</a><br>
-        - <a href="http://emanual.robotis.com/docs/en/platform/openmanipulator/" target="_blank">OpenManipulator</a><br>
+        - <a href="http://emanual.robotis.com/docs/en/platform/openmanipulator_x/overview/" target="_blank">OpenManipulator-X</a><br>
         - <a href="http://emanual.robotis.com/docs/en/parts/controller/opencr10/" target="_blank">OpenCR</a><br>
         - <a href="http://emanual.robotis.com/docs/en/software/dynamixel/dynamixel_sdk/overview/" target="_blank">Dynamixel SDK</a><br>
         - <a href="http://emanual.robotis.com/docs/en/software/dynamixel/dynamixel_workbench/" target="_blank">Dynamixel Workbench</a><br>
@@ -407,46 +419,18 @@
         <!-- ======================================================================= -->
         <h2>Books (9)</h2>
 
-        <p>
-        <b>Application White Paper of Raspberry Pi</b><br>
-        라즈베리 파이 활용백서 | 실전 프로젝트 20 (in Korean)<br>
-        Yoonseok Pyo, Jaesang Lee<br>
-        <a href="http://www.bjpublic.co.kr/" target="_blank">BJ Public</a>, ISBN: 9788994774497, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=7324830" target="_blank">Online Bookstore</a>, pp. 1-332, 2013.10.25<br>
-        </p>
+        <a class="image featured">
+          <img alt="" src="images/publications/books.png">
+        </a>
+        <a class="image featured">
+          <img alt="" src="images/publications/books2.png">
+        </a>
 
         <p>
-        <b>Let's start the robot programming using ROS.</b><br>
-        로봇 프로그래밍 ROS로 시작하자! (in Korean)<br>
-        Yoonseok Pyo<br>
-        <a href="https://github.com/robotpilot/rosbook_kr/blob/master/pdf/ROS_Book_KR.pdf" target="_blank">Free E-Book</a>, It is now available for download from Github(<a href="https://github.com/robotpilot/rosbook_kr/blob/master/pdf/ROS_Book_KR.pdf" target="_blank">https://github.com/robotpilot/rosbook_kr</a>), pp. 1-261, 2014.12.25<br>
-        </p>
-
-        <p>
-        <b>ROS Robot Programming</b><br>
-        ROS 로봇 프로그래밍 (in Korean)<br>
-        Yoonseok Pyo<br>
-        <a href="http://rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791195149278, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=8904130" target="_blank">Online Bookstore</a>, pp. 1-392, 2015.03.30<br>
-        </p>
-
-        <p>
-        <b>ROS Robot Programming</b><br>
-        詳説 ROSロボットプログラミング (in Japanese)<br>
-        Yoonseok Pyo, Ryo Kurazume, Yuuta Watanabe<br>
-        <a href="http://robotics.ait.kyushu-u.ac.jp/index.html" target="_blank">Kurazume Laboratory</a>, ISBN: 9784990873608, <a href="http://irvs.github.io/rosbook_jp/" target="_blank">E-Book</a>, pp. 1-342, 2015.11.30<br>
-        </p>
-
-        <p>
-        <b>Drone DIY A to Z</b><br>
-        드론 제작 완벽 가이드 (in Korean)<br>
-        H.I. Park, D.G. Kim, H.C. Jo, U.S. Hwang, Y.S. Pyo<br>
-        <a href="http://rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710036, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=10462923" target="_blank">Online Bookstore</a>, pp. 1-492, 2016.04.01<br>
-        </p>
-
-        <p>
-        <b>ROS Robot Programming (in Korean, Second Edition)</b><br>
-        ROS 로봇 프로그래밍 개정증보판<br>
-        Yoonseok Pyo, HanCheol Cho, Leon Ryuwoon Jung, Taehun Lim<br>
-        <a href="http://rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710180, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=12443870" target="_blank">Online Bookstore</a>, pp. 1-482, 2017.08.18<br>
+        <b>ROS Robot Programming (in Japanese)</b><br>
+        ROSロボットプログラミングバイブル<br>
+        Yoonseok Pyo, Ryo Kurazume, Leon Ryuwoon Jung<br>
+        <a href="https://www.ohmsha.co.jp/book/9784274221965/" target="_blank">オーム社</a>, ISBN: 9784274221965, <a href="http://amzn.asia/79RXhOi" target="_blank">Amazon Bookstore</a>, pp. 1-437, 2018.03.16<br>
         </p>
 
         <p>
@@ -462,16 +446,46 @@
         </p>
 
         <p>
-        <b>ROS Robot Programming (in Japanese)</b><br>
-        ROSロボットプログラミングバイブル<br>
-        Yoonseok Pyo, Ryo Kurazume, Leon Ryuwoon Jung<br>
-        <a href="https://www.ohmsha.co.jp/book/9784274221965/" target="_blank">オーム社</a>, ISBN: 9784274221965, <a href="http://amzn.asia/79RXhOi" target="_blank">Amazon Bookstore</a>, pp. 1-437, 2018.03.16<br>
+        <b>ROS Robot Programming (in Korean, Second Edition)</b><br>
+        ROS 로봇 프로그래밍 개정증보판<br>
+        Yoonseok Pyo, HanCheol Cho, Leon Ryuwoon Jung, Taehun Lim<br>
+        <a href="http://rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710180, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=12443870" target="_blank">Online Bookstore</a>, pp. 1-482, 2017.08.18<br>
         </p>
 
-        <a class="image featured">
-          <img alt="" src="images/publications/books.png"><br>
-          <img alt="" src="images/publications/books2.png">
-        </a>
+        <p>
+        <b>Drone DIY A to Z</b><br>
+        드론 제작 완벽 가이드 (in Korean)<br>
+        H.I. Park, D.G. Kim, H.C. Jo, U.S. Hwang, Y.S. Pyo<br>
+        <a href="http://rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710036, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=10462923" target="_blank">Online Bookstore</a>, pp. 1-492, 2016.04.01<br>
+        </p>
+
+        <p>
+        <b>ROS Robot Programming</b><br>
+        詳説 ROSロボットプログラミング (in Japanese)<br>
+        Yoonseok Pyo, Ryo Kurazume, Yuuta Watanabe<br>
+        <a href="http://robotics.ait.kyushu-u.ac.jp/index.html" target="_blank">Kurazume Laboratory</a>, ISBN: 9784990873608, <a href="http://irvs.github.io/rosbook_jp/" target="_blank">E-Book</a>, pp. 1-342, 2015.11.30<br>
+        </p>
+                  
+        <p>
+        <b>ROS Robot Programming</b><br>
+        ROS 로봇 프로그래밍 (in Korean)<br>
+        Yoonseok Pyo<br>
+        <a href="http://rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791195149278, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=8904130" target="_blank">Online Bookstore</a>, pp. 1-392, 2015.03.30<br>
+        </p>
+
+        <p>
+        <b>Let's start the robot programming using ROS.</b><br>
+        로봇 프로그래밍 ROS로 시작하자! (in Korean)<br>
+        Yoonseok Pyo<br>
+        <a href="https://github.com/robotpilot/rosbook_kr/blob/master/pdf/ROS_Book_KR.pdf" target="_blank">Free E-Book</a>, It is now available for download from Github(<a href="https://github.com/robotpilot/rosbook_kr/blob/master/pdf/ROS_Book_KR.pdf" target="_blank">https://github.com/robotpilot/rosbook_kr</a>), pp. 1-261, 2014.12.25<br>
+        </p>
+
+        <p>
+        <b>Application White Paper of Raspberry Pi</b><br>
+        라즈베리 파이 활용백서 | 실전 프로젝트 20 (in Korean)<br>
+        Yoonseok Pyo, Jaesang Lee<br>
+        <a href="http://www.bjpublic.co.kr/" target="_blank">BJ Public</a>, ISBN: 9788994774497, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=7324830" target="_blank">Online Bookstore</a>, pp. 1-332, 2013.10.25<br>
+        </p>        
 
         <!-- ======================================================================= -->
         <h2>Journals (7)</h2>
@@ -763,6 +777,19 @@
           <img alt="" src="images/awards/002-eng.jpg">
         </a>
 
+        <p>
+          2019-04 | The Japan Society of Mechanical Engineers (JSME), Education Award<br>
+          2017-10 | Finalist of arm TechCon Innovation Award 2017<br>
+          2017-06 | Finalist of Best Service Robotics Paper Award at ICRA 2017<br> 
+          2012-12 | Excellent Presentation Award of the SI2012, SI2012 Committee<br>
+          2009-12 | Best Poster Award, KIST Chief<br>
+          2009-05 | Chairperson Award of Japan 15th ROBO-ONE, ROBO-ONE Committee<br>
+          2008-10 | <b>Korea President Award</b>, International Robot Contest (IRC2008)<br>
+          2005-11 | Korea Robotics Society Chief Award, Ubiquitous Robot Contest (URC2005)<br>
+          2005-10 | MCIE Minister Award, Robot Universiade Festival (RUF2005)<br>
+          2005-10 | MCIE Minister Award,  ROBOTPIAD 2005<br>
+        </p>
+
       </div>
     </section>
 
@@ -798,14 +825,13 @@
         </header>
 
         <p>
-        Open Source Team<br>
         Research And Development Department<br>
         ROBOTIS CO., LTD. (<a href="http://www.robotis.com" target="_blank">http://www.robotis.com</a>)<br>
-        #1505 Ace High End Tower NO. 3, Gasan-dong 145, GasanDigital 1-ro, GeumCheon-gu, Seoul, Korea 153-787
+        ROBOTIS Campus, 37, Magokjungang 5-ro 1-gil,Gangseo-gu, Seoul, 07594, Republic of Korea
         </p>
 
         <p>
-        Follow ROBOTIS on <a href="https://twitter.com/robotis" target="_blank">Twitter</a>, <a href="https://www.facebook.com/robotis.company" target="_blank">Facebook</a>, <a href="https://www.linkedin.com/company/robotis" target="_blank">Linkedin</a>
+        Follow ROBOTIS on <a href="https://www.facebook.com/robotis.company" target="_blank">Facebook</a>, <a href="https://twitter.com/robotis" target="_blank">Twitter</a>, <a href="https://www.linkedin.com/company/robotis" target="_blank">Linkedin</a>, <a href="https://www.youtube.com/c/ROBOTISOpenSourceTeam" target="_blank">Youtube #1</a>, <a href="https://www.youtube.com/channel/UCDCsF6xgpeb5dAmTK9Usn_g" target="_blank">Youtube #2</a>
         </p>
 
         <p>
@@ -838,7 +864,7 @@
     <div class="copyright">
 
       <p>
-      &copy; 2010-2018 Yoonseok Pyo. All rights reserved.
+      &copy; 2010-2019 Yoonseok Pyo. All rights reserved.
       </p>
 
       <ul class="menu">
