--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
         <h2>Awards</h2>
 
         <p>
+        2019-10 | Ministerial Citation, Ministry of Trade, Industry and Energy, Korea<br>
         2019-04 | The Japan Society of Mechanical Engineers (JSME), Education Award<br>
         2017-10 | Finalist of arm TechCon Innovation Award 2017<br>
         2017-06 | Finalist of Best Service Robotics Paper Award at ICRA 2017<br> 
@@ -778,6 +779,7 @@
         </a>
 
         <p>
+          2019-10 | Ministerial Citation, Ministry of Trade, Industry and Energy, Korea<br>
           2019-04 | The Japan Society of Mechanical Engineers (JSME), Education Award<br>
           2017-10 | Finalist of arm TechCon Innovation Award 2017<br>
           2017-06 | Finalist of Best Service Robotics Paper Award at ICRA 2017<br> 
