--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
         <h2>Experience</h2>
 
         <p>
-        2018-09 ~ PRESENT | <a href="https://index.ros.org/doc/ros2/Governance/" target="_blank">ROS 2 Technical Steering Committee (TSC)</a><br>
         2016-04 ~ PRESENT | Senior Research Engineer, <a href="http://www.robotis.com" target="_blank">ROBOTIS Co., Ltd.</a><br>
+        2018-09 ~ 2019-12 | <a href="https://index.ros.org/doc/ros2/Governance/" target="_blank">ROS 2 Technical Steering Committee (TSC)</a><br>
         2014-05 ~ 2016-03 | JSPS Research Fellow, <a href="https://www.jsps.go.jp/english/" target="_blank">Japan Society for the Promotion of Science</a><br>
         2011-05 ~ 2014-04 | Part Time, Dongbu Robot Co., Ltd.<br>
         2010-04 ~ 2011-09 | Visiting reporter, Monthly Robot<br>
@@ -882,7 +882,7 @@
     <div class="copyright">
 
       <p>
-      &copy; 2010-2019 Yoonseok Pyo. All rights reserved.
+      &copy; 2010 Yoonseok Pyo. All rights reserved.
       </p>
 
       <ul class="menu">
