--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </p>
 
         <p>
-        Books (9), Journals (7), International Conference (9), Domestic Conference (24) [<a href="#publications">Publications</a>]
+        Books (10), Journals (7), International Conference (9), Domestic Conference (24) [<a href="#publications">Publications</a>]
         </p>
 
         <p>
@@ -434,14 +434,18 @@
         </header>
 
         <!-- ======================================================================= -->
-        <h2>Books (9)</h2>
+        <h2>Books (10)</h2>
 
         <a class="image featured">
-          <img alt="" src="images/publications/books.png">
+          <img alt="" src="images/publications/books_10.png">
         </a>
-        <a class="image featured">
-          <img alt="" src="images/publications/books2.png">
-        </a>
+
+        <p>
+        <b>Robot Programming with ROS 2</b><br>
+        ROS 2로 시작하는 로봇 프로그래밍 (in Korean)<br>
+        Yoonseok Pyo, Taehun Lim<br>
+        <a href="http://rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710722, <a href="http://www.yes24.com/Product/Goods/102949767" target="_blank">Online Bookstore</a>, pp. 1-636, 2021.08.05<br>
+        </p>
 
         <p>
         <b>ROS Robot Programming (in Japanese)</b><br>
