--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
         <b>Robot Programming with ROS 2</b><br>
         ROS 2로 시작하는 로봇 프로그래밍 (in Korean)<br>
         Yoonseok Pyo, Taehun Lim<br>
-        <a href="http://rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710722, <a href="http://www.yes24.com/Product/Goods/102949767" target="_blank">Online Bookstore</a>, pp. 1-636, 2021.08.05<br>
+        <a href="https://www.rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710722, <a href="http://www.yes24.com/Product/Goods/102949767" target="_blank">Online Bookstore</a>, pp. 1-636, 2021.08.05<br>
         </p>
 
         <p>
@@ -470,14 +470,14 @@
         <b>ROS Robot Programming (in Korean, Second Edition)</b><br>
         ROS 로봇 프로그래밍 개정증보판<br>
         Yoonseok Pyo, HanCheol Cho, Leon Ryuwoon Jung, Taehun Lim<br>
-        <a href="http://rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710180, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=12443870" target="_blank">Online Bookstore</a>, pp. 1-482, 2017.08.18<br>
+        <a href="https://www.rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710180, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=12443870" target="_blank">Online Bookstore</a>, pp. 1-482, 2017.08.18<br>
         </p>
 
         <p>
         <b>Drone DIY A to Z</b><br>
         드론 제작 완벽 가이드 (in Korean)<br>
         H.I. Park, D.G. Kim, H.C. Jo, U.S. Hwang, Y.S. Pyo<br>
-        <a href="http://rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710036, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=10462923" target="_blank">Online Bookstore</a>, pp. 1-492, 2016.04.01<br>
+        <a href="https://www.rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710036, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=10462923" target="_blank">Online Bookstore</a>, pp. 1-492, 2016.04.01<br>
         </p>
 
         <p>
@@ -491,7 +491,7 @@
         <b>ROS Robot Programming</b><br>
         ROS 로봇 프로그래밍 (in Korean)<br>
         Yoonseok Pyo<br>
-        <a href="http://rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791195149278, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=8904130" target="_blank">Online Bookstore</a>, pp. 1-392, 2015.03.30<br>
+        <a href="https://www.rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791195149278, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=8904130" target="_blank">Online Bookstore</a>, pp. 1-392, 2015.03.30<br>
         </p>
 
         <p>
