--- a/index.html
+++ b/index.html
@@ -441,8 +441,8 @@
         </a>
 
         <p>
-        <b>Robot Programming with ROS 2</b><br>
-        ROS 2로 시작하는 로봇 프로그래밍 (in Korean)<br>
+        <b>Robot Programming with ROS 2 (in Korean)</b><br>
+        ROS 2로 시작하는 로봇 프로그래밍<br>
         Yoonseok Pyo, Taehun Lim<br>
         <a href="https://www.rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710722, <a href="http://www.yes24.com/Product/Goods/102949767" target="_blank">Online Bookstore</a>, pp. 1-636, 2021.08.05<br>
         </p>
@@ -462,48 +462,49 @@
 
         <p>
         <b>ROS Robot Programming (in Chinese)</b><br>
+        ROS 机器人编程<br>
         Yoonseok Pyo, HanCheol Cho, Leon Ryuwoon Jung, Taehun Lim<br>
         <a href="http://emanual.robotis.com/docs/en/platform/turtlebot3/learn/#books" target="_blank">ROBOTIS Co.,Ltd.</a>, ISBN: 9791196230722, <a href="https://community.robotsource.org/t/download-the-ros-robot-programming-book-for-free/51" target="_blank">E-Book</a>, pp. 1-496, 2017.12.22<br>
         </p>
 
         <p>
         <b>ROS Robot Programming (in Korean, Second Edition)</b><br>
-        ROS 로봇 프로그래밍 개정증보판<br>
+        ROS 로봇 프로그래밍 (개정증보판)<br>
         Yoonseok Pyo, HanCheol Cho, Leon Ryuwoon Jung, Taehun Lim<br>
         <a href="https://www.rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710180, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=12443870" target="_blank">Online Bookstore</a>, pp. 1-482, 2017.08.18<br>
         </p>
 
         <p>
-        <b>Drone DIY A to Z</b><br>
-        드론 제작 완벽 가이드 (in Korean)<br>
+        <b>Drone DIY A to Z (in Korean)</b><br>
+        드론 제작 완벽 가이드<br>
         H.I. Park, D.G. Kim, H.C. Jo, U.S. Hwang, Y.S. Pyo<br>
         <a href="https://www.rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710036, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=10462923" target="_blank">Online Bookstore</a>, pp. 1-492, 2016.04.01<br>
         </p>
 
         <p>
-        <b>ROS Robot Programming</b><br>
-        詳説 ROSロボットプログラミング (in Japanese)<br>
+        <b>ROS Robot Programming (in Japanese)</b><br>
+        詳説 ROSロボットプログラミング<br>
         Yoonseok Pyo, Ryo Kurazume, Yuuta Watanabe<br>
         <a href="http://robotics.ait.kyushu-u.ac.jp/index.html" target="_blank">Kurazume Laboratory</a>, ISBN: 9784990873608, <a href="http://irvs.github.io/rosbook_jp/" target="_blank">E-Book</a>, pp. 1-342, 2015.11.30<br>
         </p>
 
         <p>
-        <b>ROS Robot Programming</b><br>
-        ROS 로봇 프로그래밍 (in Korean)<br>
+        <b>ROS Robot Programming (in Korean)</b><br>
+        ROS 로봇 프로그래밍<br>
         Yoonseok Pyo<br>
         <a href="https://www.rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791195149278, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=8904130" target="_blank">Online Bookstore</a>, pp. 1-392, 2015.03.30<br>
         </p>
 
         <p>
-        <b>Let's start the robot programming using ROS.</b><br>
-        로봇 프로그래밍 ROS로 시작하자! (in Korean)<br>
+        <b>Let's start the robot programming using ROS. (in Korean)</b><br>
+        로봇 프로그래밍 ROS로 시작하자!<br>
         Yoonseok Pyo<br>
         <a href="https://github.com/robotpilot/rosbook_kr/blob/master/pdf/ROS_Book_KR.pdf" target="_blank">Free E-Book</a>, It is now available for download from Github(<a href="https://github.com/robotpilot/rosbook_kr/blob/master/pdf/ROS_Book_KR.pdf" target="_blank">https://github.com/robotpilot/rosbook_kr</a>), pp. 1-261, 2014.12.25<br>
         </p>
 
         <p>
-        <b>Application White Paper of Raspberry Pi</b><br>
-        라즈베리 파이 활용백서 | 실전 프로젝트 20 (in Korean)<br>
+        <b>Application White Paper of Raspberry Pi (in Korean)</b><br>
+        라즈베리 파이 활용백서 | 실전 프로젝트 20<br>
         Yoonseok Pyo, Jaesang Lee<br>
         <a href="http://www.bjpublic.co.kr/" target="_blank">BJ Public</a>, ISBN: 9788994774497, <a href="http://book.naver.com/bookdb/book_detail.nhn?bid=7324830" target="_blank">Online Bookstore</a>, pp. 1-332, 2013.10.25<br>
         </p>
