Modified book store link
Signed-off-by: Pyo <pyo@robotis.com>

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
         <b>Robot Programming with ROS 2 (in Korean)</b><br>
         ROS 2로 시작하는 로봇 프로그래밍<br>
         Yoonseok Pyo, Taehun Lim<br>
-        <a href="https://www.rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710722, <a href="http://www.yes24.com/Product/Goods/102949767" target="_blank">Online Bookstore</a>, pp. 1-636, 2021.08.05<br>
+        <a href="https://www.rubypaper.co.kr/" target="_blank">Rubypaper</a>, ISBN: 9791186710722, <a href="https://book.naver.com/bookdb/book_detail.nhn?bid=20813218" target="_blank">Online Bookstore</a>, pp. 1-636, 2021.08.05<br>
         </p>
 
         <p>
